WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
277155
WebXR XRSessions is missing the enabledFeatures property.
https://bugs.webkit.org/show_bug.cgi?id=277155
Summary
WebXR XRSessions is missing the enabledFeatures property.
Ada Rose Cannon
Reported
2024-07-26 11:25:54 PDT
This property was a late addition to WebXR but is missing from the XRSession. This property is used to determine which optional features were granted without feature sniffing them which is different per feature and often not able to be performed on session start. Related #208988
Attachments
Add attachment
proposed patch, testcase, etc.
EWS
Comment 1
2024-07-31 04:03:59 PDT
Committed
281643@main
(2b89d244a43e): <
https://commits.webkit.org/281643@main
> Reviewed commits have been landed. Closing PR #31425 and removing active labels.
Radar WebKit Bug Importer
Comment 2
2024-07-31 04:04:14 PDT
<
rdar://problem/132890511
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug