Add the `enabledFeatures` property to WebXR Sessions. https://bugs.webkit.org/show_bug.cgi?id=277155

Reviewed by NOBODY (OOPS!).

Add the `enabledFeatures` property to WebXR Sessions.

* Source/WebCore/Modules/webxr/WebXRSession.cpp: Modified to add EnabledFeatures Property
* Source/WebCore/Modules/webxr/WebXRSession.h: Modified to add EnabledFeatures Property
* Source/WebCore/Modules/webxr/WebXRSession.idl: Modified to add EnabledFeatures Property
* LayoutTests/http/wpt/webxr/xrSession_enabledFeatures.html: Added, Imported from WPT. Modified to not test for anchor support which is unsupported in WebKit.
* LayoutTests/http/wpt/webxr/xrSession_enabledFeatures-expected.txt: Added, Imported from WPT.
* LayoutTests/http/wpt/webxr/resources/webxr_test_constants_single_view.js: Modified, Updated by importing from WPT.